# ad_afqmc

./: .gitignore  README.md  pyproject.toml  requirements.txt
ad_afqmc/: Wigner_small_d.py  __init__.py  afqmc.py  casci_trial.py  config.py  driver.py  free_prop_importance.py  grad_utils.py  hamiltonian.py  hf_guess.py  io_utils.py  lattices.py  launch_script.py  linalg_utils.py  lnoafqmc.py  lnoutils.py  logger.py  misc.py  mpi_jax.py  optimize_trial.py  options.py  prep.py  propagation.py  propagation_v2.py  pyscf_interface.py  run_afqmc.py  sampler.py  sampling.py  sharding_utils.py  spin_utils.py  sr.py  stat_utils.py  utils.py  vap.py  walkers.py  wavefunctions.py  wavefunctions_v2.py
dmrg/: dmrg_pin_cluster_yc_6x6.jl  lattices.jl
examples/: 01-RHF_based_afqmc.py  02-RCCSD_based_afqmc.py  03-UHF_based_afqmc.py  04-UCCSD_based_afqmc.py  05-afqmc_on_GPU.py  06-afqmc_with_MPI.py  07-afqmc_usual_keywords.py  08-afqmc_grad.py  09-RHF_freeprojection.py  09-lnoafqmc.py  10_UHF_freeprojection.py  11_RHF_CCSD_freeprojection.py  12_CISD_CCSD_freeprojection.py  12_UCISD_UCCSD_freeprojection.py  13_UHF_s2projector_freeprojection.py  14_UCISD_AUTO_afqmc.py  14_UCISD_AUTO_s2projector_freeprojection.py  auto_trial.ipynb  benzene.py  extended_hubbard.py  hchain.2rdm.py  hchain.msd.py  hchain.py  hchain.uhf.msd.py  hubbard.ipynb  mf_trials.ipynb  nh3.py  psi_h_psi.py  read_fp_prop_data.py  run_hubbard_tri2.py  symm_proj.py  test_extended_hubbard_hopping.ipynb  test_lattice.ipynb  trial_guide.py  var_afqmc.py
hubbard_tri/: get_hubbard_ints.py  hubbard_tri_scan_afqmc.py  (+6 more)
(+104 files in other folders)
